# arbiter

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.ja.md  README.md  go.mod  mise.toml
.github/workflows/: ci.yml  release.yml
cmd/arbiter/: main.go
config/: config.schema.json  example-config.yaml
contracts/v0/: action.schema.json  approval_event.schema.json  authz_decision.schema.json  authz_request.schema.json  event.schema.json  generation_result.schema.json  job_cancel_request.schema.json  job_status_event.schema.json  response_plan.schema.json
contracts/v1/: action.schema.json  action_result.schema.json  approval_event.schema.json  authz_decision.schema.json  authz_request.schema.json  event.schema.json  generation_result.schema.json  job_cancel_request.schema.json  job_status_event.schema.json  ops.action.schema.json  ops.action_result.schema.json  ops.approval_event.schema.json  ops.capabilities.schema.json  ops.contracts_metadata.schema.json  ops.errors.schema.json  ops.event.schema.json  ops.plan.schema.json  (+1 more)
crates/arbiter-contracts/: Cargo.toml  build.rs
crates/arbiter-contracts/src/: lib.rs
crates/arbiter-server/: Cargo.toml
crates/arbiter-server/src/: audit.rs  contracts.rs  errors.rs  handlers.rs  lib.rs  store.rs
crates/arbiter-server/tests/: api.rs
docs/: README.md  architecture-principles.md  audit-mirror.md  authz-resilience.md  contract-compatibility-policy.md  contracts-endpoint.md  contracts-intent.md  contracts-metadata.md  current-spec.md  decision-log.md  errors.md  extensibility-roadmap.md  operational-philosophy.md  runbook.md  slo.md  spec.md
docs/spec/: errors.md  (+4 more)
openapi/: v0.yaml  v1.yaml
rfcs/: RFC-ARB-0001.md
scripts/: version.py
src/: cli.rs  main.rs
(+26 files in other folders)
