[package]
name = "arbiter-contracts"
version = "1.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
jsonschema = "0.37.1"
serde_yaml = "0.9.34"
sha2 = "0.10.9"

[build-dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
sha2 = "0.10.9"
