[package]
name = "arbiter-server"
version = "1.1.1"
edition = "2021"

[dependencies]
arbiter-config = { path = "../arbiter-config" }
arbiter-contracts = { path = "../arbiter-contracts" }
arbiter-kernel = { path = "../arbiter-kernel" }
axum = "0.8.6"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
jsonschema = "0.37.1"
tower = "0.5.2"
